# all_the_data_things

./: .pre-commit-config.yaml  README.md  justfile  pre-commit-config.yaml
.github/workflows/: build-dbt.yml  cleanup-dbt.yml
orchestrate/prefect/: .gitignore  Pipfile  pyproject.toml
orchestrate/prefect/examples/: readme.md
orchestrate/prefect/examples/flows/: rain_flow.py
transform/dbt/fpl/: dbt_project.yml
transformation/dbt/jaffle_shop/: README.md  packages.yml  profiles.yml
transformation/dbt/jaffle_shop/macros/: drop_database.sql  set_up_db.sql  setup_database.sql
transformation/dbt/jaffle_shop/models/example/: my_first_dbt_model.sql
transformation/dbt/utils/: get_suffix.py
