[project]
name = "prefect-examples"
version = "0.1.0"
description = "Prefect orchestration examples for all_the_data_things"
readme = "examples/readme.md"
requires-python = ">=3.13"
dependencies = [
    "prefect>=3.6.16",
    "prefect-slack>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["examples"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length  = 88
indent-width = 4

target-version = "py313"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.

# Can toggle this select ALL vs. the actual during development if you just want to check
# against everything everything and have it highlighted in the editor.

# select = ["ALL"]
select = [
    "E4",
    "E7",
    "E9",
    "F",

    "ASYNC", # flake8-async (ASYNC)
    "B",     # flake8-Bugbear (B)
    "I",     # isort (I)
    "SIM",   # flake8-simplify (SIM)
    "RET",   # flake8-return (RET)
    "RUF",   # Ruff-specific rules (RUF)
    "FURB",  # furb-specific rules (FURB)
    "PT",    # flake8-pytest (PT)

    "UP045", # pyupgrade non-pep604-annotation-optiona rule (UP045)
]

# Ignore these for compatibility with the ruff formatter.
ignore = [
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D206",   # indent-with-spaces
    "D300",   # triple-single-quotes
    "G010",   # logging-warn
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
]

# Accepts: "google", "numpy", or "pep257".

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable   = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google" # accepts "google", "numpy", or "pep257".

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
addopts = "-v --cov=. --cov-report=term-missing"
testpaths = ["tests"]
